--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,7 @@ body {
   z-index: 9999999;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(46, 47, 66, 0.4);
   opacity: 0;
   visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -567,39 +567,47 @@ body {
   transform: translate(-50%, -50%);
   width: 408px;
   min-height: 584px;
-  background-color: #ffffff;
   border-radius: 4px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
   position: absolute;
-  width: 24px;
-  height: 24px;
-  border-radius: 100%;
-  stroke-width: 1px;
-  stroke: rgba(0, 0, 0, 0.1);
+  display: flex;
   top: 24px;
   right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.1);
   padding: 0;
-  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
   line-height: 0;
   stroke: #111111;
   background-color: #e7e9fc;
-  transition: background-color, stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
-  stroke: #ffffff;
   background-color: #404bbf;
   border-radius: 100%;
-  fill: #e7e9fc;
+  fill: #ffffff;
   stroke-width: 1px;
 }
 .review-form-description {
-  margin-top: 48px;
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
