--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,7 @@ body {
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
+  border: none;
   border-radius: 100%;
   fill: #ffffff;
   stroke-width: 1px;
@@ -627,7 +628,7 @@ body {
 }
 
 .review-form-field-wrapper {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .review-form-input {
@@ -635,12 +636,13 @@ body {
   border-radius: 4px;
   width: 100%;
   height: 40px;
-  padding-left: 40px;
+  padding-left: 38px;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-input:focus {
-  border-color: #404bbf;
+  border-color: #4d5ae5;
   outline: transparent;
 }
 
@@ -653,24 +655,31 @@ body {
   top: 50%;
   left: 16px;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-input:focus + .review-form-field-icon {
-  fill: #404bbf;
+  fill: #4d5ae5;
 }
 
 .review-form-message {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
   height: 120px;
   resize: none;
   padding: 8px 16px;
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-message:focus {
-  border-color: #404bbf;
+  border-color: #4d5ae5;
   outline: transparent;
 }
 
@@ -702,11 +711,15 @@ body {
   border: 1px solid rgba(46, 47, 66, 0.4);
   cursor: pointer;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-checkbox:checked
   + .review-form-checkbox-label
   .review-form-own-checkbox {
+  border: none;
   background-color: #404bbf;
   border-color: #404bbf;
   fill: #ffffff;
@@ -726,6 +739,8 @@ body {
 }
 
 .review-form-submit {
+  border: none;
+  min-width: 169px;
   display: block;
   font-weight: 500;
   font-size: 16px;
@@ -742,4 +757,5 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
