--- a/css/styles.css
+++ b/css/styles.css
@@ -628,7 +628,7 @@ body {
 }
 
 .review-form-field-wrapper {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .review-form-input {
@@ -638,6 +638,7 @@ body {
   height: 40px;
   padding-left: 38px;
   outline: transparent;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -722,7 +723,7 @@ body {
   border: none;
   background-color: #404bbf;
   border-color: #404bbf;
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 
 .review-form-checkbox:focus
