--- a/css/styles.css
+++ b/css/styles.css
@@ -540,6 +540,53 @@ body {
   fill: #f4f4fd;
 }
 
+.second-review-form {
+  display: flex;
+  gap: 24px;
+}
+
+.form-footer-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.email-footer {
+  margin-left: 80px;
+}
+
+.btn-subscribe-footer {
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  background-color: #4d5ae5;
+  cursor: pointer;
+}
+
+.btn-footer {
+  margin-left: 16px;
+}
+
 /* ======= BACKDROP STYLES ======= */
 .backdrop {
   position: fixed;
